Project configuration: Entity Framework, NUnit and Unity DI added. Also some basic services and app structure modifications;

--- a/FinanceManager.API/FinanceManager.API/Web.config
+++ b/FinanceManager.API/FinanceManager.API/Web.config
@@ -44,4 +44,7 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="FinanceManagerConnectionString" connectionString="Data Source=.\;Initial Catalog=FinanceManager;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
