--- a/FinanceManager.API/Financemanager.Database/Financemanager.Database.csproj
+++ b/FinanceManager.API/Financemanager.Database/Financemanager.Database.csproj
@@ -49,7 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\Context\AccountsContext.cs" />
+    <Compile Include="Migrations\201705081543582_InitialMigration.cs" />
+    <Compile Include="Migrations\201705081543582_InitialMigration.Designer.cs">
+      <DependentUpon>201705081543582_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="src\Context\FinanceManagerContext.cs" />
     <Compile Include="src\Entities\ConceptModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -57,7 +62,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201705081543582_InitialMigration.resx">
+      <DependentUpon>201705081543582_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
