First attempt to implement UnitOfWork... Tests disabled.

--- a/FinanceManager.API/FinanceManager.DAL/FinanceManager.DAL.csproj
+++ b/FinanceManager.API/FinanceManager.DAL/FinanceManager.DAL.csproj
@@ -86,8 +86,12 @@
     <Compile Include="src\Repositories\AccountsRepository.cs" />
     <Compile Include="src\Repositories\Contracts\IAccountsRepository.cs" />
     <Compile Include="src\Repositories\Contracts\IExpensesRepository.cs" />
+    <Compile Include="src\Repositories\Contracts\IUsersRepository.cs" />
     <Compile Include="src\Repositories\ExpensesRepository.cs" />
     <Compile Include="src\Repositories\FinanceManagerRepository.cs" />
+    <Compile Include="src\Repositories\UsersRepository.cs" />
+    <Compile Include="src\UnitOfWork\FinanceManagerUnitOfWork.cs" />
+    <Compile Include="src\UnitOfWork\UserAccountsUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Financemanager.Database\Financemanager.Database.csproj">
