--- a/FinanceManager.API/FinanceManager.API.Tests/FinanceManager.API.Tests.csproj
+++ b/FinanceManager.API/FinanceManager.API.Tests/FinanceManager.API.Tests.csproj
@@ -36,6 +36,7 @@
       <HintPath>..\packages\Castle.Core.4.0.0\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
     <Reference Include="Moq, Version=4.7.10.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
@@ -88,6 +89,10 @@
     <ProjectReference Include="..\FinanceManager.DAL\FinanceManager.DAL.csproj">
       <Project>{A522D85E-146E-4DC9-BE00-04DCE5E11B63}</Project>
       <Name>FinanceManager.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Financemanager.Database\Financemanager.Database.csproj">
+      <Project>{51593420-AE38-4796-AD18-FD78D1CF2754}</Project>
+      <Name>Financemanager.Database</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
