--- a/FinanceManager.API/FinanceManager.API.Tests/FinanceManager.API.Tests.csproj
+++ b/FinanceManager.API/FinanceManager.API.Tests/FinanceManager.API.Tests.csproj
@@ -78,6 +78,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FakeDbSet.cs" />
+    <Compile Include="FakeFinanceManagerContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Test\AccountsServiceTest.cs" />
   </ItemGroup>
