--- a/FinanceManager.API/FinanceManager.API/FinanceManager.API.csproj
+++ b/FinanceManager.API/FinanceManager.API/FinanceManager.API.csproj
@@ -113,6 +113,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serialization\Types\MajorAccountViewData.cs" />
+    <Compile Include="Serialization\Types\AccountBalance.cs" />
+    <Compile Include="Serialization\Types\AccountOperation.cs" />
+    <Compile Include="Serialization\Types\AccountSummary.cs" />
     <Compile Include="Services\AccountsService.cs" />
     <Compile Include="Services\IAccountsService.cs" />
   </ItemGroup>
