--- a/FinanceManager.API/Financemanager.Database/Financemanager.Database.csproj
+++ b/FinanceManager.API/Financemanager.Database/Financemanager.Database.csproj
@@ -62,6 +62,10 @@
     <Compile Include="Migrations\201706230600372_AddColumn_NextOperationExecutionDate.Designer.cs">
       <DependentUpon>201706230600372_AddColumn_NextOperationExecutionDate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707281508030_MoneyOperations_InsteadOf_ExpensesAndIncomes.cs" />
+    <Compile Include="Migrations\201707281508030_MoneyOperations_InsteadOf_ExpensesAndIncomes.Designer.cs">
+      <DependentUpon>201707281508030_MoneyOperations_InsteadOf_ExpensesAndIncomes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="src\Context\FinanceManagerContext.cs" />
     <Compile Include="src\Context\IFinanceManagerContext.cs" />
@@ -81,6 +85,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706230600372_AddColumn_NextOperationExecutionDate.resx">
       <DependentUpon>201706230600372_AddColumn_NextOperationExecutionDate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707281508030_MoneyOperations_InsteadOf_ExpensesAndIncomes.resx">
+      <DependentUpon>201707281508030_MoneyOperations_InsteadOf_ExpensesAndIncomes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
