--- a/FinanceManager.API/FinanceManager.BL/FinanceManager.BL.csproj
+++ b/FinanceManager.API/FinanceManager.BL/FinanceManager.BL.csproj
@@ -41,7 +41,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepetitionUnitCalculator.cs" />
+    <Compile Include="UserInput\IMoneyOperationLogic.cs" />
+    <Compile Include="UserInput\MoneyOperationLogic.cs" />
+    <Compile Include="ViewModels\MoneyOperationViewModel.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FinanceManager.DAL\FinanceManager.DAL.csproj">
+      <Project>{A522D85E-146E-4DC9-BE00-04DCE5E11B63}</Project>
+      <Name>FinanceManager.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FinanceManager.Types\FinanceManager.Types.csproj">
+      <Project>{918AA76B-3A54-4CBB-8C19-5F332FA7885A}</Project>
+      <Name>FinanceManager.Types</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
