--- a/FinanceManager.API/FinanceManager.BL/FinanceManager.BD.csproj
+++ b/FinanceManager.API/FinanceManager.BL/FinanceManager.BD.csproj
@@ -44,7 +44,7 @@
     <Compile Include="RepetitionUnitCalculator.cs" />
     <Compile Include="UserInput\IMoneyOperationLogic.cs" />
     <Compile Include="UserInput\MoneyOperationLogic.cs" />
-    <Compile Include="ViewModels\MoneyOperationViewModel.cs" />
+    <Compile Include="UserInput\MoneyOperationViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FinanceManager.DAL\FinanceManager.DAL.csproj">
@@ -56,7 +56,9 @@
       <Name>FinanceManager.Types</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
