--- a/FinanceManager.API/FinanceManager.API/FinanceManager.API.csproj
+++ b/FinanceManager.API/FinanceManager.API/FinanceManager.API.csproj
@@ -109,6 +109,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountsController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\MoneyOperationsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
