--- a/FinanceManager.API/FinanceManager.Web/FinanceManager.Web.csproj
+++ b/FinanceManager.API/FinanceManager.Web/FinanceManager.Web.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Models\MonthSummaryViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Models\MoneyOperationStatus.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
