--- a/FinanceManager.API/FinanceManager.Web/FinanceManager.Web.csproj
+++ b/FinanceManager.API/FinanceManager.Web/FinanceManager.Web.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Models\MonthOperationViewModel.cs" />
     <Compile Include="Models\MonthSummaryViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\MonthSummaryService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Models\MoneyOperationStatus.cs" />
   </ItemGroup>
