--- a/FinanceManager.API/FinanceManager.API/FinanceManager.API.csproj
+++ b/FinanceManager.API/FinanceManager.API/FinanceManager.API.csproj
@@ -138,9 +138,9 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FinanceManager.BL\FinanceManager.BD.csproj">
+    <ProjectReference Include="..\FinanceManager.BL\FinanceManager.BL.csproj">
       <Project>{de346a55-7bc6-4cce-9fa0-a841581bb6ed}</Project>
-      <Name>FinanceManager.BD</Name>
+      <Name>FinanceManager.BL</Name>
     </ProjectReference>
     <ProjectReference Include="..\FinanceManager.DAL\FinanceManager.DAL.csproj">
       <Project>{a522d85e-146e-4dc9-be00-04dce5e11b63}</Project>
