--- a/FinanceManager.API/FinanceManager.Web/FinanceManager.Web.csproj
+++ b/FinanceManager.API/FinanceManager.Web/FinanceManager.Web.csproj
@@ -296,9 +296,9 @@
       <Project>{BFE5FB64-2935-4C89-A587-9C72D55C2C95}</Project>
       <Name>FinanceManager.API</Name>
     </ProjectReference>
-    <ProjectReference Include="..\FinanceManager.BL\FinanceManager.BD.csproj">
+    <ProjectReference Include="..\FinanceManager.BL\FinanceManager.BL.csproj">
       <Project>{DE346A55-7BC6-4CCE-9FA0-A841581BB6ED}</Project>
-      <Name>FinanceManager.BD</Name>
+      <Name>FinanceManager.BL</Name>
     </ProjectReference>
     <ProjectReference Include="..\FinanceManager.Types\FinanceManager.Types.csproj">
       <Project>{918AA76B-3A54-4CBB-8C19-5F332FA7885A}</Project>
