--- a/FinanceManager.API/FinanceManager.Web/FinanceManager.Web.csproj
+++ b/FinanceManager.API/FinanceManager.Web/FinanceManager.Web.csproj
@@ -201,14 +201,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\MoneyOperationViewModel.cs" />
-    <Compile Include="Models\MonthOperationsTableViewModel.cs" />
+    <Compile Include="Models\MoneyOperationsViewModel.cs" />
     <Compile Include="Models\MonthOperationViewModel.cs" />
     <Compile Include="Models\PeriodSummaryViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\MonthSummaryService.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="Models\MoneyOperationStatus.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -281,6 +278,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
