--- a/FinanceManager.API/FinanceManager.API/FinanceManager.API.csproj
+++ b/FinanceManager.API/FinanceManager.API/FinanceManager.API.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Controllers\AccountsController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\MoneyOperationsController.cs" />
+    <Compile Include="Controllers\PeriodSummaryController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -121,13 +122,15 @@
     <Compile Include="Serialization\Types\AccountSummary.cs" />
     <Compile Include="Serialization\Types\MoneyOperationStatusViewModel.cs" />
     <Compile Include="Serialization\Types\MoneyOperationViewModel.cs" />
-    <Compile Include="Serialization\Types\MonthOperationsTableViewModel.cs" />
-    <Compile Include="Serialization\Types\MonthOperationViewModel.cs" />
-    <Compile Include="Serialization\Types\PeriodSummaryViewModel.cs" />
+    <Compile Include="Serialization\Types\PeriodOperationsModel.cs" />
+    <Compile Include="Serialization\Types\PeriodOperationModel.cs" />
+    <Compile Include="Serialization\Types\PeriodSummaryModel.cs" />
     <Compile Include="Services\AccountsService.cs" />
     <Compile Include="Services\IAccountsService.cs" />
     <Compile Include="Services\IMoneyOperationsService.cs" />
+    <Compile Include="Services\IPeriodSummaryService.cs" />
     <Compile Include="Services\MoneyOperationsService.cs" />
+    <Compile Include="Services\PeriodSummaryService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
