--- a/FinanceManager.API/FinanceManager.BL/FinanceManager.BL.csproj
+++ b/FinanceManager.API/FinanceManager.BL/FinanceManager.BL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="UserInput\IMoneyOperationLogic.cs" />
     <Compile Include="UserInput\MoneyOperationLogic.cs" />
     <Compile Include="UserInput\MoneyOperationModel.cs" />
+    <Compile Include="Metadata\MoneyOperationPeriodMetadata.cs" />
     <Compile Include="ViewModels\MoneyOperationScheduleItemModel.cs" />
     <Compile Include="ViewModels\MoneyOperationScheduleModel.cs" />
     <Compile Include="ViewModels\MoneyOperationStatus.cs" />
