--- a/FinanceManager.API/FinanceManager.BL/FinanceManager.BL.csproj
+++ b/FinanceManager.API/FinanceManager.BL/FinanceManager.BL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="RepetitionUnitCalculator.cs" />
     <Compile Include="MoneyOperationLogic\IMoneyOperationLogic.cs" />
     <Compile Include="MoneyOperationLogic\MoneyOperationLogic.cs" />
+    <Compile Include="UserInput\MoneyOperationChangeModel.cs" />
     <Compile Include="UserInput\MoneyOperationModel.cs" />
     <Compile Include="Metadata\MoneyOperationPeriodMetadata.cs" />
     <Compile Include="Model\MoneyOperationScheduleItemModel.cs" />
