--- a/FinanceManager.API/FinanceManager.Importer/packages.config
+++ b/FinanceManager.API/FinanceManager.Importer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="ExcelDataReader" version="3.4.2" targetFramework="net452" />
   <package id="ExcelDataReader.DataSet" version="3.4.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
